--- a/PersonalWebsite/Views/Home/Index.cshtml
+++ b/PersonalWebsite/Views/Home/Index.cshtml
@@ -6,29 +6,26 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>JS+HTML5酷炫星空背景动画特效</title>
-
+    <title>个人主页</title>
     @*<link href="css/index_style.css" rel="stylesheet" type="text/css">*@
     <link href="~/Content/css/index_style.css" rel="stylesheet" />
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
-
 </head>
 <body>
-
     <!-----HEADER STAR----->
 
-
     <div class="header" id="demo">
-        <div class="top_logo"></div>
-
+        <div class="top_logo">
+            <span style="font-size: 60px;color: #1d7eb8;margin-left: 33%;line-height: 365%;">个&nbsp;人&nbsp;网&nbsp;站</span>
+        </div>
 
         <div class="nav">
-            <a class="gv" href="#">建站服务</a>
-            <a class="gv" href="#">仿站技术</a>
-            <a class="gv" href="#">作品案例</a>
-            <a class="gv" href="#">工 作 站</a>
-            <a class="gv" href="#">资讯中心</a>
-            <a class="gv" href="#">在线帮助</a>
+            <a class="gv" href="https://blog.csdn.net/qq_36330228">CSDN</a>&nbsp;
+            <a class="gv" href="https://github.com/wangqilong1225">GitHub</a>&nbsp;
+            <a class="gv" href="http://www.cnblogs.com/wangqilong/">博客园</a>
+            @*<a class="gv" href="#">工 作 站</a>c
+        <a class="gv" href="#">资讯中心</a>
+        <a class="gv" href="#">在线帮助</a>*@
         </div>
 
         <div class="canvaszz"> </div>
@@ -41,13 +38,12 @@
     <div class="videozz"></div>
     <!--用来解决视频右键菜单，用于视频上面的遮罩层 END-->
     <!--音乐 START-->
-    <audio controls autoplay class="audio">  //自动播放属性 
-        <source src="~/Content/css/Music.mp3" type="audio/mp3">
+    @*<audio controls autoplay class="audio">//自动播放属性
+        <source src="~/Content/css/Music.mp3" type="audio/mp3">播放
         <source src="~/Content/css/Music.ogg" type="audio/ogg">
         <source src="~/Content/css/Music.aac" type="audio/mp4">
-    </audio>
+    </audio>*@
     <!--音乐 END-->
-
 
     <script>
         //宇宙特效
