移动端页面

--- a/PersonalWebsite/Content/css/index_style.css
+++ b/PersonalWebsite/Content/css/index_style.css
@@ -1,14 +1,14 @@
 
 body {margin:0 auto;overflow:hidden;}  
 
-/*=============第一页=============*/	
-.header{
-	margin:0 auto;
-	width:100%;
-	height:640px;
-	background-color:#000;
-	position:relative;
-	}
+/*=============第一页=============*/
+.header {
+    margin: 0 auto;
+    width: 100%;
+    height: 640px;
+    background-color: #1d7eb8;/*#000;*/
+    position:relative;
+}
     .header canvas {
         width: 100%;
         height: auto /*默认全屏显示 可自己设置高度640px*/;
