--- a/PersonalWebsite/Views/Home/Index.cshtml
+++ b/PersonalWebsite/Views/Home/Index.cshtml
@@ -23,12 +23,12 @@
             <a class="gv" href="https://blog.csdn.net/qq_36330228">CSDN</a>&nbsp;
             <a class="gv" href="https://github.com/wangqilong1225">GitHub</a>&nbsp;
             <a class="gv" href="http://www.cnblogs.com/wangqilong/">博客园</a>
-            @*<a class="gv" href="#">工 作 站</a>c
-        <a class="gv" href="#">资讯中心</a>
+            <a class="gv" href="#">工 作 站</a>
+            @*<a class="gv" href="#">资讯中心</a>
         <a class="gv" href="#">在线帮助</a>*@
         </div>
 
-        <div class="canvaszz"> </div>
+       
         <canvas id="canvas"></canvas>
     </div>
 
