--- a/PersonalWebsite/Content/css/index_style2.css
+++ b/PersonalWebsite/Content/css/index_style2.css
@@ -3,56 +3,33 @@ body {margin:0 auto;overflow:hidden;}
 
 /*=============第一页=============*/
 .header {
-    margin: 0 auto;
-    width: 100%;
-    height: 640px;
-    background-color: #1d7eb8;/*#000;*/
-    position:relative;
+    /*margin: 0 auto;*/
+    /*width: auto;
+    height: auto;
+    background-color: #1d7eb8; /*#000;*/*/
+    /*position: relative;*/
 }
     .header canvas {
-        width: 100%;
-        height: auto /*默认全屏显示 可自己设置高度640px*/;
+        width: auto;
+        height: auto; /*默认全屏显示 可自己设置高度640px*/;
         display: inline-block;
-        vertical-align: baseline
-        position:absolute;
-	    z-index:-1;
+        vertical-align: baseline;
+        z-index:-1;
     }
-.header .canvaszz{  /*用来解决视频右键菜单，用于视频上面的遮罩层*/
-	width:100%;
-	background-image: url(img/in_top_bj.jpg);
-	height:640px;
-	position:absolute;
-	z-index:10;
-		filter:alpha(opacity=40);  
-      	-moz-opacity:0.4;  
-      	-khtml-opacity: 0.4;  
-      	opacity: 0.4;
-	}
 
-.audio{ 
-/*设置音乐显示位置*/
-	width:45px;
-	position:fixed;top:65px;left:94%;
-	z-index:100;
-	filter:alpha(opacity=30);  
-      -moz-opacity:0.3;  
-      -khtml-opacity: 0.3;  
-      opacity: 0.3;
-	}
+
+
 .header .top_logo{
-	/*background-image: url(img/top_logo.png);*/
 	margin:0 auto;
-	width:750px;
-	height:200px;
+	width:auto;
+	height:auto;
 	position:absolute;
 	z-index:100;
 	top:10px;
-	left: 50%;
-	margin-left: -390px;
 	}	
 
 .header .nav{
-	width:804px;
+	width:auto;
 	height:auto;
 	position:absolute;
 	z-index:30;
@@ -63,7 +40,7 @@ body {margin:0 auto;overflow:hidden;}
 .header .nav a.gv { 
 	text-decoration:none; 
 	background:url(img/nav_gv.png) repeat 0px 0px; 
-	width: 130px; 
+	width: auto; 
 	height: 43px; 
 	display: block; 
 	text-align:center;		/*水平居中*/
@@ -85,7 +62,7 @@ body {margin:0 auto;overflow:hidden;}
 	}
 	
 .header	.topcn{
-	width: 980px;
+	width: auto;
 	top:200px;
 	left: 50%;
 	margin-left: -490px;
