--- a/PersonalWebsite/Views/Home/Index.Mobile.cshtml
+++ b/PersonalWebsite/Views/Home/Index.Mobile.cshtml
@@ -7,43 +7,55 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>个人主页</title>
-    @*<link href="css/index_style.css" rel="stylesheet" type="text/css">*@
-    <link href="~/Content/css/index_style2.css" rel="stylesheet" />
+    <link href="~/Content/css/index_style5.css" rel="stylesheet" />
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+    <style>
+        body {
+            margin: 0 auto;
+            overflow: hidden;
+        }
+        .header .nav a.gv {
+            text-decoration: none;
+            background: url('../../Content/css/img/nav_gv2.fw.png') repeat 0px 0px;
+            width:400px;
+            height: 100px;
+            display: block;
+            text-align: center; /*水平居中*/
+            line-height: 100px; /*上下居中*/
+            cursor: pointer;
+            float: left; /*左浮动*/
+            margin: 8px 2px 25px 25px;
+            font: 50px/100px 'microsoft yahei';
+            color: #066197;
+        }
+
+        .header .nav a.gv:hover {
+            background: url('../../Content/css/img/nav_gv2.fw.png') repeat 0px -43px;
+            color: #1d7eb8;
+            -webkit-box-shadow: 0 0 6px #1d7eb8;
+            transition-duration: 0.5s;
+        }
+    </style>
 </head>
 <body>
     <!-----HEADER STAR----->
-
     <div class="header" id="demo">
-        <div class="top_logo2" style="margin:0 auto;text-align:center;position:absolute;">
+        <div class="top_logo2" style="position:absolute;left:16%;top:8%;">
             <span style="font-size: 125px;color:#1d7eb8;text-align:center;">个&nbsp;人&nbsp;网&nbsp;站</span>
         </div>
-
-        @*<div class="nav" style="top: 541px;">
-            <a class="gv" href="https://blog.csdn.net/qq_36330228">CSDN</a>&nbsp;
-            <a class="gv" href="https://github.com/wangqilong1225">GitHub</a>&nbsp;
+        <div class="nav" style="position:absolute;left:23%;top:28%;">
+            <a class="gv" href="https://github.com/wangqilong1225">GitHub</a>
+        </div>       
+        <div class="nav" style="position:absolute;left:23%;top:38%;">
+            <a class="gv" href="https://blog.csdn.net/qq_36330228">CSDN</a>   
+        </div>       
+        <div class="nav" style="position:absolute;left:23%;top:48%;">           
             <a class="gv" href="http://www.cnblogs.com/wangqilong/">博客园</a>
-            <a class="gv" href="#">工 作 站</a>c
-                <a class="gv" href="#">资讯中心</a>
-                <a class="gv" href="#">在线帮助</a>
-        </div>*@
-
+        </div>
 
         <canvas id="canvas"></canvas>
     </div>
 
-
-    <!-----HEADER END----->
-    <!--用来解决视频右键菜单，用于视频上面的遮罩层 START-->
-    @*<div class="videozz"></div>*@
-    <!--用来解决视频右键菜单，用于视频上面的遮罩层 END-->
-    <!--音乐 START-->
-    @*<audio controls autoplay class="audio">//自动播放属性
-            <source src="~/Content/css/Music.mp3" type="audio/mp3">播放
-            <source src="~/Content/css/Music.ogg" type="audio/ogg">
-            <source src="~/Content/css/Music.aac" type="audio/mp4">
-        </audio>*@
-    <!--音乐 END-->
 
     <script>
         //宇宙特效
