--- a/PersonalWebsite/Views/Home/Index.Mobile.cshtml
+++ b/PersonalWebsite/Views/Home/Index.Mobile.cshtml
@@ -5,7 +5,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>个人主页</title>
+    <title>主页</title>
     <link href="~/Content/css/index_style5.css" rel="stylesheet" />
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
     <style>
@@ -19,10 +19,10 @@
             width:400px;
             height: 100px;
             display: block;
-            text-align: center; /*水平居中*/
-            line-height: 100px; /*上下居中*/
+            text-align: center;     /*水平居中*/
+            line-height: 100px;     /*上下居中*/
             cursor: pointer;
-            float: left; /*左浮动*/
+            float: left;            /*左浮动*/
             margin: 8px 2px 25px 25px;
             font: 50px/100px 'microsoft yahei';
             color: #066197;
@@ -86,7 +86,6 @@
         ctx2.fill();
 
         // End cache
-
         function random(min, max) {
             if (arguments.length < 2) {
                 max = min;
@@ -98,7 +97,6 @@
                 max = min;
                 min = hold;
             }
-
             return Math.floor(Math.random() * (max - min + 1)) + min;
         }
 
@@ -110,7 +108,6 @@
         }
 
         var Star = function () {
-
             this.orbitRadius = random(maxOrbit(w, h));
             this.radius = random(60, this.orbitRadius) / 8;
             //星星大小
